<resources>
    <string name="app_name">QuickPoll</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_surveys">Surveys</string>
    <string name="menu_polls">Polls</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_confirm_pwd">Confirm Password</string>
    <string name="prompt_profile_image">Profile Image</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="empty_error">field cannot be empty</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirm_password">Password do not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="description">"Description :"</string>
    <string name="timeToComplete">"Time to Complete :"</string>
    <string name="surveyDescription">"Survey Description"</string>
    <string name="Questions">"Questions"</string>
    <string name="next">"Next"</string>
    <string name="survey_questions">"Survey Questions"</string>
    <string name="poll_questions">"Poll Questions"</string>
    <string name="poll_graph_result">"Poll Graph Result"</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="poll_number">Enter Room Number</string>
    <string name="prompt_room_number">Room Number</string>
    <string name="error_room_number">Room Number cannot be Empty.</string>
    <string name="submit_button">Submit</string>
    <string name="scan_code">Scan QR Code</string>
    <string name="txt_or">OR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_answer">Enter your answer here</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="prompt_name">Name</string>
    <string name="menu_location_specific_surveys">Location based Surveys</string>
    <string name="menu_all_surveys">All Surveys</string>


    <!-- Survey Variables -->

    <!-- End of Survey Variables -->
</resources>
