<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_surveys">


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.kshitij.quickpoll.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_surveys"
        android:name="com.example.kshitij.quickpoll.ui.survey.SurveyFragment"
        android:label="@string/menu_surveys"
        tools:layout="@layout/survey_fragment" >
        <action
            android:id="@+id/action_nav_surveys_to_surveyDescriptionFragment"
            app:destination="@id/surveyDescriptionFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_polls"
        android:name="com.example.kshitij.quickpoll.ui.poll.PollFragment"
        android:label="@string/menu_polls"
        tools:layout="@layout/poll_fragment" />
    <fragment
        android:id="@+id/surveyDescriptionFragment"
        android:name="com.example.kshitij.quickpoll.ui.surveyCycle.SurveyDescriptionFragment"
        android:label="@string/surveyDescription"
        tools:layout="@layout/survey_description_fragment" >
        <action
            android:id="@+id/action_surveyDescriptionFragment_to_surveyQuestionsFragment"
            app:destination="@id/surveyQuestionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/surveyQuestionsFragment"
        android:name="com.example.kshitij.quickpoll.ui.surveyQuestions.SurveyQuestionsFragment"
        android:label="@string/survey_questions"
        tools:layout="@layout/survey_questions_fragment" >
        <action
            android:id="@+id/action_surveyQuestionsFragment_to_nav_surveys"
            app:destination="@id/nav_surveys"
            app:popUpTo="@+id/nav_surveys"
            app:popUpToInclusive="true" />
    </fragment>

        tools:layout="@layout/survey_questions_fragment" />
    <fragment
        android:id="@+id/pollQuestFragment"
        android:name="com.example.kshitij.quickpoll.ui.poll.PollQuestionFragment"
        android:label="@string/poll_questions"
        tools:layout="@layout/fragment_poll_question" >
    </fragment>
    <fragment
        android:id="@+id/pollGraphFragment"
        android:name="com.example.kshitij.quickpoll.ui.poll.PollGraphFragment"
        android:label="@string/poll_graph_result"
        tools:layout="@layout/fragment_poll_graph" >
    </fragment>

</navigation>