<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">


    <ImageView
        android:id="@+id/register_user_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/prompt_profile_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        tools:srcCompat="@tools:sample/avatars" />

    <!--android:layout_marginStart="128dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="128dp"-->
    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_first_name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user_profile_image" />

    <EditText
        android:id="@+id/register_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/prompt_last_name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/register_first_name"
        app:layout_constraintStart_toStartOf="@+id/register_first_name"
        app:layout_constraintTop_toBottomOf="@+id/register_first_name" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/register_last_name"
        app:layout_constraintStart_toStartOf="@+id/register_last_name"
        app:layout_constraintTop_toBottomOf="@+id/register_last_name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/register_email"
        app:layout_constraintStart_toStartOf="@+id/register_email"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/prompt_confirm_pwd"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/register_password"
        app:layout_constraintStart_toStartOf="@+id/register_password"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <EditText
        android:id="@+id/register_dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/prompt_dob"
        android:imeOptions="actionDone"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="@+id/register_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/register_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password" />

    <RadioGroup
        android:id="@+id/register_genderRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/register_dob"
        app:layout_constraintStart_toStartOf="@+id/register_dob"
        app:layout_constraintTop_toBottomOf="@+id/register_dob"
        android:checkedButton="@+id/register_maleRadioButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/prompt_gender"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/register_maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/register_femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_vertical_spacing"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:text="@string/female"/>
    </RadioGroup>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:enabled="true"
        android:text="@string/action_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_genderRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/register_genderRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/register_genderRadioGroup"/>

    <LinearLayout
        android:id="@+id/register_header_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/register_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>